# bazel-example-read-json

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md
.github/: renovate-regex.json  renovate.json
.github/workflows/: ci.yaml
json/: BUILD  load_json_file.bzl
